tweaks to views

--- a/app/flowgraph/actions/new/new_view.html
+++ b/app/flowgraph/actions/new/new_view.html
@@ -1,4 +1,4 @@
-<form id="new_project_form"  method="post" action="/flowgraph/0/new">
+<form id="new_project_form"  method="post" action="/flowgraphs/new">
     <table width="400" border="0" cellspacing="0" cellpadding="10">
         <tr class="required">
             <th scope="row"><label for="project[label]">Name</label></th>
