continuing work with easel

--- a/app/flowgraph/actions/action/view.html
+++ b/app/flowgraph/actions/action/view.html
@@ -5,7 +5,20 @@
 <h2>Project: <%- project._id %></h2>
         
 <canvas id="action_canvas" width="980" height="580"></canvas>
-        
+
+<!-- Import EaselJS Framework -->
+<script src="/js/libs/easel/src/easeljs/utils/UID.js"></script>
+<script src="/js/libs/easel/src/easeljs/geom/Matrix2D.js"></script>
+<script src="/js/libs/easel/src/easeljs/geom/Rectangle.js"></script>
+<script src="/js/libs/easel/src/easeljs/events/MouseEvent.js"></script>
+<script src="/js/libs/easel/src/easeljs/utils/SpriteSheetUtils.js"></script>
+<script src="/js/libs/easel/src/easeljs/display/SpriteSheet.js"></script>
+<script src="/js/libs/easel/src/easeljs/display/DisplayObject.js"></script>
+<script src="/js/libs/easel/src/easeljs/display/Container.js"></script>
+<script src="/js/libs/easel/src/easeljs/display/Stage.js"></script>
+<script src="/js/libs/easel/src/easeljs/display/BitmapAnimation.js"></script>
+<script src="/js/libs/easel/src/easeljs/utils/Ticker.js"></script>
+<!-- End EaselJS Imports -->
 <!-- Import EaselJS Framework -->
 <script src="/js/libs/easel/lib/easel.js"></script>
 <!-- End EaselJS Imports -->
