work on figures. Begin work on bg.

--- a/app/flowgraph/actions/action/view.html
+++ b/app/flowgraph/actions/action/view.html
@@ -26,6 +26,9 @@
 <script src="/js/libs/easel/src/easeljs/utils/Ticker.js"></script>
 <!-- End EaselJS Imports -->
 
+<script src="/js/scener/sprites/People.js" defer="defer">
+
+</script>
 <script src="/js/scener/CORE.js" defer="defer">
 
 </script>
