work on factory, isometrics

--- a/app/flowgraph/actions/action/view.html
+++ b/app/flowgraph/actions/action/view.html
@@ -30,6 +30,7 @@
 <script src="/js/libs/easel/src/easeljs/utils/Ticker.js"></script>
 <!-- End EaselJS Imports -->
 
+<script src="/js/scener/util/easely.js" defer="defer"></script>
 <script src="/js/scener/sprites/People.js" defer="defer"></script>
 
 <script src="/js/scener/ground/Tile.js" defer="defer"></script>
