work on isometric - placing people on iso plane

--- a/app/flowgraph/actions/action/view.html
+++ b/app/flowgraph/actions/action/view.html
@@ -24,6 +24,7 @@
 <script src="/js/libs/easel/src/easeljs/display/SpriteSheet.js"></script>
 <script src="/js/libs/easel/src/easeljs/display/DisplayObject.js"></script>
 <script src="/js/libs/easel/src/easeljs/display/Container.js"></script>
+<script src="/js/libs/easel/src/easeljs/display/Text.js"></script>
 <script src="/js/libs/easel/src/easeljs/display/Stage.js"></script>
 <script src="/js/libs/easel/src/easeljs/display/BitmapAnimation.js"></script>
 
@@ -31,6 +32,7 @@
 <!-- End EaselJS Imports -->
 
 <script src="/js/scener/util/easely.js" defer="defer"></script>
+<script src="/js/scener/util/poly.js" defer="defer"></script>
 <script src="/js/scener/sprites/People.js" defer="defer"></script>
 
 <script src="/js/scener/ground/Tile.js" defer="defer"></script>
