work on sidewalks

--- a/app/flowgraph/actions/action/view.html
+++ b/app/flowgraph/actions/action/view.html
@@ -39,6 +39,7 @@
 <script src="/js/scener/ground/Ground.js" defer="defer"></script>
 
 <script src="/js/scener/toolbar/Button.js" defer="defer"></script>
+<script src="/js/scener/toolbar/Terrain.js" defer="defer"></script>
 <script src="/js/scener/sprites/People.js" defer="defer"></script>
 
 <script src="/js/scener/CORE.js" defer="defer"></script>
