more sprites; work on refactoring all references to SCENER_CORE

--- a/app/flowgraph/actions/action/view.html
+++ b/app/flowgraph/actions/action/view.html
@@ -31,8 +31,10 @@
 <script src="/js/libs/easel/src/easeljs/utils/Ticker.js"></script>
 <!-- End EaselJS Imports -->
 
+<script src="/js/scener/CORE.js" defer="defer"></script>
 <script src="/js/scener/util/easely.js" defer="defer"></script>
 <script src="/js/scener/util/poly.js" defer="defer"></script>
+<script src="/js/scener/util/colors.js" defer="defer"></script>
 <script src="/js/scener/sprites/People.js" defer="defer"></script>
 
 <script src="/js/scener/ground/Tile.js" defer="defer"></script>
@@ -40,6 +42,5 @@
 
 <script src="/js/scener/toolbar/Button.js" defer="defer"></script>
 <script src="/js/scener/toolbar/Terrain.js" defer="defer"></script>
+<script src="/js/scener/toolbar/Person.js" defer="defer"></script>
 <script src="/js/scener/sprites/People.js" defer="defer"></script>
-
-<script src="/js/scener/CORE.js" defer="defer"></script>
