--- a/app/flowgraph/actions/action/view.html
+++ b/app/flowgraph/actions/action/view.html
@@ -26,6 +26,7 @@
 <script src="/js/libs/easel/src/easeljs/display/Container.js"></script>
 <script src="/js/libs/easel/src/easeljs/display/Text.js"></script>
 <script src="/js/libs/easel/src/easeljs/display/Stage.js"></script>
+<script src="/js/libs/easel/src/easeljs/display/Bitmap.js"></script>
 <script src="/js/libs/easel/src/easeljs/display/BitmapAnimation.js"></script>
 
 <script src="/js/libs/easel/src/easeljs/utils/Ticker.js"></script>
