adding house, tree

--- a/app/flowgraph/actions/action/view.html
+++ b/app/flowgraph/actions/action/view.html
@@ -37,12 +37,17 @@
 <script src="/js/scener/util/poly.js" defer="defer"></script>
 <script src="/js/scener/util/colors.js" defer="defer"></script>
 <script src="/js/scener/sprites/People.js" defer="defer"></script>
+<script src="/js/scener/sprites/House.js" defer="defer"></script>
 
 <script src="/js/scener/sprites/ground/Ground.js" defer="defer"></script>
 <script src="/js/scener/sprites/ground/Tile.js" defer="defer"></script>
 <script src="/js/scener/sprites/Ground.js" defer="defer"></script>
+<script src="/js/scener/sprites/House.js" defer="defer"></script>
+<script src="/js/scener/sprites/Tree.js" defer="defer"></script>
 
 <script src="/js/scener/toolbar/Button.js" defer="defer"></script>
 <script src="/js/scener/toolbar/Terrain.js" defer="defer"></script>
 <script src="/js/scener/toolbar/Person.js" defer="defer"></script>
+<script src="/js/scener/toolbar/House.js" defer="defer"></script>
+<script src="/js/scener/toolbar/Tree.js" defer="defer"></script>
 <script src="/js/scener/sprites/People.js" defer="defer"></script>
